# app

./: .bazelproject  .gitignore  .gitmodules  BUILD.bazel  Makefile  README.md  WORKSPACE  jdeps_install.json  package.json
.buildkite/: pipeline.yml
.github/: FUNDING.yml
config/: build.bzl  gust.bzl  jdeps.bzl
javatests/: BUILD.bazel
javatests/util/: BUILD.bazel  FacilitiesDataTest.java  GeohashConsistencyTest.java
src/: BUILD.bazel  api.yml  application.yml  covidmap.proto  logback.xml  reflection.json
src/config/: 00-namespace.k8s.yaml  05-networking.k8s.yaml  05-permissions.k8s.yaml  10-googleapis.istio.yaml  20-daemons.k8s.yaml  25-services.k8s.yaml  30-backend.k8s.yaml  45-redis.k8s.yaml  50-envoy.k8s.local.yaml  50-envoy.k8s.yaml  99-covidmap.k8s.local.yaml  99-covidmap.k8s.yaml  BUILD.bazel  rollup.config.prod.js  tsconfig.json
src/config/api/: covidmap.pb  covidmap.yml
src/config/bigquery/: facilities.bq.yml  facilities.csv  reports.bq.json  reports.bq.yml  tracked.bq.json  tracked.bq.yml  transform.sql
src/config/cloudfn/: report-insert.cf
src/config/gateway/: BUILD.bazel  Dockerfile  envoy.yaml  sandbox.crt  sandbox.key
src/core/: AppConfig.java  BUILD.bazel  module.js
src/frontend/: BUILD.bazel  _base.scss  _vars.scss  api.js  app.scss  main.js
src/server/: AppService.kt  CovidmapInterceptor.kt  CovidmapLogic.kt  ExternalResources.kt  FacilitiesManager.kt  FacilityDecoder.java  HomeController.kt  ReflectionService.kt
src/templates/: BUILD.bazel  home.soy
tools/: bazel.rc  bazel_stamp_vars.sh
