
package(
    default_visibility = ["//visibility:public"],
)


## Top-level aliases

alias(
    name = "covidmap",
    actual = "//src:CovidMapServer",
)

alias(
    name = "container",
    actual = "//src:CovidMapServer-image",
)

alias(
    name = "gateway",
    actual = "//src/config/gateway:gateway",
)

alias(
    name = "app",
    actual = "covidmap",
)


## File exports

alias(
    name = "tsconfig.json",
    actual = "//src/config:tsconfig.json",
)

exports_files([
    "jdeps_install.json",
])

