
package(
    default_visibility = ["//visibility:public"],
)

load(
    "@gust//defs/toolchain:schema.bzl",
    "service",
)

load(
    "@bazel_tools//tools/build_defs/pkg:pkg.bzl",
    "pkg_tar",
)

load(
    "@gust//defs/toolchain:deps.bzl",
    "maven",
)

load(
    "@gust//defs/toolchain:backend.bzl",
    java_library = "jdk_library",
    "micronaut_library",
    "micronaut_service",
    "micronaut_controller",
    "micronaut_application",
    "micronaut_interceptor",
)


exports_files([
    "api.yml",
    "application.yml",
    "logback.xml",
    "reflection.json",
])

service(
    name = "covidmap_proto",
    srcs = ["covidmap.proto"],
    deps = [
        "@gust//gust/page:media_proto",
        "@proto_common//:type_month",
        "@proto_common//:type_latlng",
        "@proto_common//:type_timeofday",
        "@proto_common//google/api:annotations_proto",
        "@proto_common//google/api:client_proto",
        "@proto_common//google/api:field_behavior",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:field_mask_proto",
    ]
)

pkg_tar(
    name = "covidmap_proto_pkg",
    srcs = [":covidmap_proto"],
)

alias(
    name = "frontend",
    actual = "//src/frontend:app",
)

alias(
    name = "home_soy",
    actual = "//src/templates:home_soy",
)

micronaut_interceptor(
    name = "CovidmapInterceptor",
    srcs = ["server/CovidmapInterceptor.kt"],
    deps = [
        ":CovidmapLogic",
    ]
)

micronaut_library(
    name = "ReflectionService",
    srcs = ["server/ReflectionService.kt"],
    deps = [
        maven("io.grpc:grpc-api"),
        maven("io.grpc:grpc-services"),
    ],
)

micronaut_library(
    name = "ExternalResources",
    srcs = ["server/ExternalResources.kt"],
    deps = ["//src/core:AppConfig"],
)

micronaut_library(
    name = "CovidmapLogic",
    srcs = ["server/CovidmapLogic.kt"],
    proto_deps = [":covidmap_proto"],
    deps = [
        ":FacilitiesManager",
        "@com_google_guava",
        "@jdeps//:com_maxmind_db_maxmind_db",
        "@jdeps//:com_maxmind_geoip2_geoip2",
        maven("com.google.cloud:google-cloud-pubsub"),
        maven("io.grpc:grpc-api"),
        maven("io.grpc:grpc-services"),
    ]
)

java_library(
    name = "facilities-data",
    resources = [
        "@facilities//file:file",
    ],
)

micronaut_library(
    name = "FacilitiesManager",
    srcs = ["server/FacilitiesManager.kt"],
    proto_deps = [":covidmap_proto"],
    deps = [
        ":FacilitiesDecoder",
        "@com_google_guava",
        "@jdeps//:ch_hsr_geohash",
        "@jdeps//:com_google_cloud_google_cloud_bigquery",
    ],
    resource_jars = [
        ":facilities-data",
    ],
)

micronaut_library(
    name = "FacilitiesDecoder",
    srcs = ["server/FacilityDecoder.java"],
    proto_deps = [
        ":covidmap_proto",
        "@gust//gust/core:latlng_proto",
    ],
    deps = [
        "@com_google_guava",
        "@jdeps//:ch_hsr_geohash",
        "@jdeps//:com_google_code_gson_gson",
        "@jdeps//:com_googlecode_libphonenumber_libphonenumber",
    ]
)

micronaut_service(
    name = "AppService",
    srcs = ["server/AppService.kt"],
    services = [":covidmap_proto"],
    deps = [
        ":CovidmapLogic",
        ":CovidmapInterceptor",
    ],
)

micronaut_controller(
    name = "HomeController",
    srcs = ["server/HomeController.kt"],
    templates = ["//src/templates:home_soy"],
    proto_deps = [":covidmap_proto"],
    deps = [
        ":CovidmapLogic",
        ":ExternalResources",
        "@gust//java/gust/backend/annotations:annotations",
    ],
)

micronaut_application(
    # -- App Info -- #
    name = "CovidMapServer",
    config = ":application.yml",
    logging_config = ":logback.xml",
    ports = ["8081", "8082"],

    # -- App Dependencies -- #
    controllers = [
        ":HomeController",
    ],

    services = [
        ":AppService",
        ":ReflectionService",
    ],

    js_modules = {
        "covidmap.main": "//src/frontend:app.js",
        "covidmap.ui": "@covidmap_ui//:ui.js",
    },

    css_modules = {
        "covidmap.mdl": "//src/frontend:mdl",
        "covidmap.skin": "@covidmap_ui//:ui",
        "covidmap.styles": "//src/frontend:styles",
    },

    classpath_resources = [
        "@maxmind//:maxmind.mmdb",
    ],

    # -- Publishing / Images -- #
    native = False,
    tag = "$(covidmap_release_tag)",
    repository = "covid-impact-map/jvm",
    native_repository = "covid-impact-map/native",
    reflection_configuration = ":reflection.json",
)
