
package(
    default_visibility = ["//visibility:public"],
)

load(
    "@gust//defs/toolchain/docker:rules.bzl",
    "container_image",
)

load(
    "@gust//defs/toolchain:pkg.bzl",
    "tarball",
)


filegroup(
    name = "envoy-yaml",
    srcs = ["envoy.yaml"],
)

filegroup(
    name = "tls-key",
    srcs = ["tls.key"],
)

filegroup(
    name = "tls-cert",
    srcs = ["tls.crt"],
)

tarball(
    name = "tls-assets",
    srcs = [
        ":tls-key",
        ":tls-cert",
    ],
    strip_prefix = "/src/config/envoy",
    package_dir = "/etc/ssl",
    mode = "0440",
)

tarball(
    name = "envoy-configs",
    srcs = [":envoy-yaml"],
    strip_prefix = "/src/config/envoy",
    package_dir = "/etc/envoy",
    mode = "0440",
)

container_image(
    name = "gateway",
    base = "@envoy_base//image",
    image_format = "Docker",
    repository = "covid-impact-map/gateway",
    ports = ["8443", "8090", "9901"],
    tars = [
        ":tls-assets",
        ":envoy-configs",
    ],
    args = [
      "--component-log-level", "router:debug",
    ],
)
